# atomicrag

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
atomicrag/: __init__.py  config.py
atomicrag/index/: chunker.py  entity_extractor.py  extractor.py  graph_builder.py  pipeline.py  vocabulary_extractor.py
atomicrag/integrations/: __init__.py  gemini.py  huggingface.py  langchain.py  ollama.py  openai.py
atomicrag/models/: graph.py  protocols.py  results.py
atomicrag/retrieve/: anchoring.py  pipeline.py  ranking.py  traversal.py
atomicrag/storage/: json_storage.py  pgvector_storage.py
atomicrag/utils/: prompts.py  similarity.py
tests/: test_e2e_gemini.py  test_vocab_extraction.py
